Add timer and fps counter

--- a/GameEngine2.0/GameEngine2.0.vcxproj
+++ b/GameEngine2.0/GameEngine2.0.vcxproj
@@ -150,12 +150,14 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RenderingEngine.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Display.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="RenderingEngine.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
